--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tCHy29Ec2wKtPpddC5y
+    access-key-secret: GLnVdAquevjvM4xLQnq6XrUMCMH0hB
+    bucket-name: hmleadnews-xxc
