店铺营业状态设置业务代码实现

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -12,3 +12,9 @@ sky:
     access-key-id: LTAI5tCHy29Ec2wKtPpddC5y
     access-key-secret: GLnVdAquevjvM4xLQnq6XrUMCMH0hB
     bucket-name: hmleadnews-xxc
+
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0
